<?xml version="1.0"?>
<package format="2">
  <name>cuvis_ros</name>
  <version>1.0.0</version>
  <description>The cuvis_ros package</description>

  <maintainer email="hanson@cubert-gmbh.de">Nathaniel Hanson</maintainer>
  <license>MIT</license>
  <url type="website">https://www.cubert-hyperspectral.com</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>roslaunch</build_depend>
  <export>
  </export>
</package>
